# laravel-api/storage/api-docs/api-docs.json
@@ -5,7 +5,7 @@
         "contact": {
             "email": "vongruz@protonmail.com"
         },
-        "version": "0.0.8-62-g192d97b"
+        "version": "0.0.8-68-g634177e"
     },
     "paths": {
         "/": {
@@ -43,6 +43,80 @@
                         }
                     }
                 }
+            }
+        },
+        "/signup/domain": {
+            "post": {
+                "summary": "Create a domain",
+                "description": "Creates a domain. Depending on the configuration the domain `domain_name` \n     *                      can be a subdomain of the main domain or an independent domain",
+                "requestBody": {
+                    "description": "Client side search object",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Domain"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Get application name and version",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "title": {
+                                            "description": "APP_NAME variable",
+                                            "type": "string"
+                                        },
+                                        "version": {
+                                            "description": "Fit tag version",
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "examples": [
+                                    {
+                                        "summary": "App info",
+                                        "value": {
+                                            "title": "FusionPBX API",
+                                            "version": "0.0.8-62-g192d97b"
+                                        }
+                                    }
+                                ]
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "components": {
+        "schemas": {
+            "Domain": {
+                "properties": {
+                    "domain_name": {
+                        "description": "The product name",
+                        "type": "string",
+                        "example": "site.com"
+                    },
+                    "domain_enabled": {
+                        "description": "The product name",
+                        "type": "boolean"
+                    },
+                    "domain_description": {
+                        "description": "The product name",
+                        "type": "string"
+                    },
+                    "domain_parent_uuid": {
+                        "description": "The product name",
+                        "type": "string"
+                    }
+                },
+                "type": "object"
             }
         }
     },
